// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> should match snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #6B6B78;
  border-radius: 4px;
  border-width: 1px;
  border-color: #9898A6;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

<div>
  <div
    class="c0"
  >
    default
  </div>
</div>
`;

exports[`<Tag /> should match snapshot with custom icon and informative type 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #1D856C;
  border-radius: 4px;
  border-width: 1px;
  border-color: #1D856C;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C1EEDB;
  color: #231B22;
  border-radius: 4px;
  border-color: #C1EEDB;
  font-size: 12px;
  font-weight: 500;
}

.c1 svg {
  margin-right: 4px;
}

<div>
  <div
    class="c0 c1"
  >
    <svg
      fill="#231B22"
      height="24"
      width="24"
    />
    success with custom icon
  </div>
</div>
`;

exports[`<Tag /> should match snapshot with variant prop 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #1D856C;
  border-radius: 4px;
  border-width: 1px;
  border-color: #1D856C;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #7068D4;
  border-radius: 4px;
  border-width: 1px;
  border-color: #7068D4;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #FF874C;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FF874C;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

<div>
  <div
    class="c0"
  >
    success
  </div>
  <div
    class="c1"
  >
    informative
  </div>
  <div
    class="c2"
  >
    attention
  </div>
</div>
`;

exports[`<Tag /> should match snapshot with variant prop and informative type 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #1D856C;
  border-radius: 4px;
  border-width: 1px;
  border-color: #1D856C;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #7068D4;
  border-radius: 4px;
  border-width: 1px;
  border-color: #7068D4;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #FF874C;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FF874C;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C1EEDB;
  color: #231B22;
  border-radius: 4px;
  border-color: #C1EEDB;
  font-size: 12px;
  font-weight: 500;
}

.c1 svg {
  margin-right: 4px;
}

.c3 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0DFFF;
  color: #231B22;
  border-radius: 4px;
  border-color: #E0DFFF;
  font-size: 12px;
  font-weight: 500;
}

.c3 svg {
  margin-right: 4px;
}

.c5 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FCD6C3;
  color: #231B22;
  border-radius: 4px;
  border-color: #FCD6C3;
  font-size: 12px;
  font-weight: 500;
}

.c5 svg {
  margin-right: 4px;
}

<div>
  <div
    class="c0 c1"
  >
    success
  </div>
  <div
    class="c2 c3"
  >
    informative
  </div>
  <div
    class="c4 c5"
  >
    attention
  </div>
</div>
`;

exports[`<Tag /> should match snapshot with without icon and informative type 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #1D856C;
  border-radius: 4px;
  border-width: 1px;
  border-color: #1D856C;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C1EEDB;
  color: #231B22;
  border-radius: 4px;
  border-color: #C1EEDB;
  font-size: 12px;
  font-weight: 500;
}

.c1 svg {
  margin-right: 4px;
}

<div>
  <div
    class="c0 c1"
  >
    success without icon
  </div>
</div>
`;
